[project]
name = "mastergithubabouteverthing"
version = "0.1.0"
description = "Notes, research, and projects from my Master's in Software Engineering at SWJTU (2026–2029)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lxml>=6.1.0",
    "numpy>=2.2.6",
    "requests>=2.33.1",
]
